change img for project portfolio

--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
                         <div class='portfolio__content'>
                             <a href="https://sheva1991.github.io/Monticello/" target="_blank" class="project">
                                 <div class="project__img-wrap">
-                                    <img src="../img/pr2.png" alt="Monticello-img" class="project__img">
+                                    <img src="../img/pr1.jpg" alt="Monticello-img" class="project__img">
                                 </div>
                                 <h3 class="project__title">Monticello</h3>
                                 <p class="project__text">The project is made using HTML5, SCSS, JS, gulp.</p>
                             </a>
                             <a href="https://sheva1991.github.io/AKAD/" target="_blank" class="project">
                                 <div class="project__img-wrap">
-                                    <img src="../img/pr1.png" alt="AKAD-img" class="project__img">
+                                    <img src="../img/pr2.jpg" alt="AKAD-img" class="project__img">
                                 </div>
                                 <h3 class="project__title">AKAD</h3>
                                 <p class="project__text">Multi-page site on Bootsrap. The project is made using HTML5, SCSS, JS,
@@ -100,7 +100,7 @@
                             </a>
                             <a href="https://sheva1991.github.io/Acrostia/" target="_blank" class="project">
                                 <div class="project__img-wrap">
-                                    <img src="../img/pr3.png" alt="Acrostia-img" class="project__img">
+                                    <img src="../img/pr3.jpg" alt="Acrostia-img" class="project__img">
                                 </div>
                                 <h3 class="project__title">Acrostia</h3>
                                 <p class="project__text">SPA project made using React, Redux, React-Redux, Redux-Form. Also used
