add one project at section portfolio

--- a/index.html
+++ b/index.html
@@ -88,7 +88,14 @@
                                     <img src="img/pr1.jpg" alt="Monticello-img" class="project__img">
                                 </div>
                                 <h3 class="project__title">Monticello</h3>
-                                <p class="project__text">The project is made using HTML5, SCSS, JS, gulp.</p>
+                                <p class="project__text">The project is made using HTML5, SCSS, JS, jQuery.</p>
+                            </a>
+                            <a href="https://sheva1991.github.io/testForVisualCraft/dist/" target="_blank" class="project">
+                                <div class="project__img-wrap">
+                                    <img src="img/tsr.png" alt="TRS-img" class="project__img">
+                                </div>
+                                <h3 class="project__title">TRS</h3>
+                                <p class="project__text">HTML5, SCSS, JS, jQuery.</p>
                             </a>
                             <a href="https://sheva1991.github.io/AKAD/" target="_blank" class="project">
                                 <div class="project__img-wrap">
