add new project at portfolio - pizza shop

--- a/index.html
+++ b/index.html
@@ -113,6 +113,15 @@
                                 <p class="project__text">SPA project made using React, Redux, React-Redux, Redux-Form. Also used
                                     HTML5, SCSS, BOOTSTRAP.</p>
                             </a>
+                            <a href="https://internet-pizza-market-part1.herokuapp.com/" target="_blank" class="project">
+                                <div class="project__img-wrap">
+                                    <img src="img/pizzaShop.png" alt="Pizza-market-img" class="project__img">
+                                </div>
+                                <h3 class="project__title">Pizza shop</h3>
+                                <p class="project__text">React, Redux, React-Redux, Redux-thunk, React-content-loader, Express,
+                                    Json-server, HTML5,
+                                    SCSS</p>
+                            </a>
                         </div>
                     </section>
                 </div>
