refactor education section - ended CODIFUN courses

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <section class="section education">
                         <h2 class="section__title">education</h2>
                         <dl class='education__list'>
-                            <dt class='education__time'>03/2020-present</dt>
+                            <dt class='education__time'>03/2020-09/2020</dt>
                             <dd class='education__name'><span>ADVANCED FRONTEND WEB DEVELOPER</span>CODIFUN, “IT NATION”;
                                 online</dd>
                             <dt class='education__time'>09/2019-03/2020</dt>
