delete Acrostia project at portfolio and add Porten - men's shop

--- a/index.html
+++ b/index.html
@@ -105,14 +105,6 @@
                                 <p class="project__text">Multi-page site on Bootsrap. The project is made using HTML5, SCSS, JS,
                                     jQuery, gulp.</p>
                             </a>
-                            <a href="https://sheva1991.github.io/Acrostia/" target="_blank" class="project">
-                                <div class="project__img-wrap">
-                                    <img src="img/pr3.jpg" alt="Acrostia-img" class="project__img">
-                                </div>
-                                <h3 class="project__title">Acrostia</h3>
-                                <p class="project__text">SPA project made using React, Redux, React-Redux, Redux-Form. Also used
-                                    HTML5, SCSS, BOOTSTRAP.</p>
-                            </a>
                             <a href="https://internet-pizza-market-part1.herokuapp.com/" target="_blank" class="project">
                                 <div class="project__img-wrap">
                                     <img src="img/pizzaShop.png" alt="Pizza-market-img" class="project__img">
@@ -121,6 +113,15 @@
                                 <p class="project__text">React, Redux, React-Redux, Redux-thunk, React-content-loader, Express,
                                     Json-server, HTML5,
                                     SCSS</p>
+                            </a>
+                            <a href="https://sheva1991.github.io/Porten-ManShop/" target="_blank" class="project">
+                                <div class="project__img-wrap">
+                                    <img src="img/manShopLanding.png" alt="PortenManShop-img" class="project__img">
+                                </div>
+                                <h3 class="project__title">Porten - men's store</h3>
+                                <p class="project__text">SPA project made using React, Typescript, Formik, Yup, React-slick,
+                                    Slick-carousel.
+                                </p>
                             </a>
                         </div>
                     </section>
